--- a/styles.css
+++ b/styles.css
@@ -79,6 +79,7 @@ section{
 }
 #general p:nth-child(2){
     font-size: 3em;    
+    margin-bottom: 10px;
     color: #2DC5FA;    
 }
 #general p:nth-child(3){
@@ -153,7 +154,7 @@ section{
     padding: 5%;
 }
 #about h2{
-    font-size: 5rem;
+    font-size: 4rem;
     margin-bottom: 20px;
     font-family: 'Roboto Mono', monospace; 
 }
@@ -310,7 +311,8 @@ footer a:hover{
 }
 
 #empresas h2{
-    font-size: 2.5rem;
+    font-size: 1.8rem;
+    margin-bottom: 10px;
     
 }
 #empresas h3{
@@ -337,6 +339,7 @@ footer a:hover{
     background-color: #2DC5FA; 
     color: #2D354C;
     padding:3% 10%;
+    font-size: 1.5rem;
 }
 
 #logos{
@@ -350,9 +353,10 @@ footer a:hover{
 }
 
 #logos img{
-    
+    width: 150px;    
+}
+#logos img:nth-child(6){    
     width: 200px;
-    transition: all .3s;
 }
 
 
@@ -369,7 +373,7 @@ footer a:hover{
     width: 30%;
 }
 #costos div:nth-child(2){
-    font-size: 3rem;
+    font-size: 2rem;
 }
 
 
@@ -495,7 +499,7 @@ footer a:hover{
         margin-bottom: 20px;
     }
     #costos div:nth-child(2){
-        font-size: 2.5rem;
+        font-size: 2rem;
     }
     #logos{
         width: 100%;
