--- a/styles.css
+++ b/styles.css
@@ -35,7 +35,7 @@ header{
     position: fixed;
 }
 nav{    
-    padding: 1% 0;
+    padding: .5% 0;
     display: flex;
     justify-content: space-between;
 }
@@ -45,6 +45,9 @@ nav ul {
     display: flex;
     justify-content: center;
     align-items: center;
+}
+nav img {
+    width: 40px;
 }
 
 
@@ -74,7 +77,7 @@ section{
     font-weight: 100;   
 }
 #general p:first-child{
-    font-size: 6em;    
+    font-size: 4.5em;    
     font-family: 'Roboto Mono', monospace; 
 }
 #general p:nth-child(2){
@@ -137,9 +140,11 @@ section{
     text-decoration: none;
     background-color: #2DC5FA;
     padding: 10px;
+    margin-right: 10px;
 }
 .button-sm{
     width: 200px;
+    padding: 5px;
 }
 /*About section*/
 #about > div {    
@@ -239,7 +244,7 @@ footer h2{
     font-family: 'Roboto Mono', monospace; 
 }
 footer a i{
-    font-size: 2rem;
+    font-size: 1.5rem;
 }
 footer a:hover{
     text-decoration: none;
@@ -491,8 +496,7 @@ footer a:hover{
     footer > div{
         width: 100%;
     }
-    footer a{
-        
+    footer a{        
         font-size: .8rem;
     }
     footer div:nth-child(2) div{    
